# TinyDL

./: .gitignore  CMakeLists.txt  FindMKL.cmake  README.md  main.cpp
cuda/: CMakeLists.txt
cuda/include/: api.cuh  kernel.cuh
cuda/src/: api.cu  kernel.cu
include/: CuMatrix.h  MemPool.h  Tensor.h
include/model/: ActivateFun.h  BatchNorm.h  Convolution.h  Linear.h  LossFun.h  Model.h  Utils.h  UtilsFun.h
include/operator/: AddOperator.h  ConvToImgOperator.h  DivOperator.h  DotOperator.h  ImgToConvOperator.h  LogOperator.h  MaxPoolOperator.h  MulOperator.h  Operator.h  PowOperator.h  ReluOperator.h  ResizeOperator.h  SubOperator.h  TransposeOperator.h
include/optimizer/: AdamOptimizer.h  Optimizer.h  SGDOptimizer.h
src/: CuMatrix.cpp  MemPool.cpp  Tensor.cpp
src/model/: ActivateFun.cpp  BatchNorm.cpp  Convolution.cpp  Linear.cpp  LossFun.cpp  Model.cpp  Utils.cpp  UtilsFun.cpp
src/operator/: AddOperator.cpp  ConvToImgOperator.cpp  DivOperator.cpp  DotOperator.cpp  ImgToConvOperator.cpp  LogOperator.cpp  MaxPoolOperator.cpp  MulOperator.cpp  Operator.cpp  PowOperator.cpp  ReluOperator.cpp  ResizeOperator.cpp  SubOperator.cpp  TransposeOperator.cpp
src/optimizer/: AdamOptimizer.cpp  Optimizer.cpp  SGDOptimizer.cpp
